# scbamtools

./: .coveragerc  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
scbamtools/: annotation.py  bctree.py  contrib.py  gene_model.py  pl.py  quant.py  tk.py  util.py
scbamtools/config/: __init__.py  default.yaml
scbamtools/cython/: fastquery.pyx  kmers.pyx  types.pxd
test_data/: adap_test.R1.fastq  adap_test.bam  adap_test.ref.bam  simple_chrom_sizes.csv
tests/: fixtures.py  make_test_genome_and_reads.py  test_annotation.py  test_bctree.py  test_fastq_to_ubam.py  test_quant.py  test_trim.py  test_uBAM.py
