[metadata]
name = scbamtools 
version = attr: scbamtools.contrib.__version__
author = Marvin Jens
author_email = marvin.jens@charite.de
description = "High performance Cython + Python tools to process BAM files with tags as they arise in single-cell sequencing"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marvin-jens/mrfifo
project_urls =
    Bug Tracker = https://github.com/marvin-jens/mrfifo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
license = MIT

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
package_dir =
    scbamtools = scbamtools
packages = scbamtools
install_requires =
    mrfifo
#[options.package_data]
#spacemake = 
#    test_data/*.fastq.gz
#    test_data/*.bam

# [options.entry_points]
# console_scripts = 
#     alnstats = spacemake.alnstats:cmdline
#     preprocess = spacemake.preprocess:cmdline
#     spacemake = spacemake.cmdline:cmdline
#     pb_annotate = spacemake.longread.cmdline:cmdline

[tool:pytest]
testpaths = tests
addopts = --cov=scbamtools --cov-report html

[pydocstyle]
inherit = false
match-dir = (?!tests)[^\.].*

